k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nars-api
  namespace: nars
spec:
  type: ClusterIP
  selector:
    app: nars-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
